# sample-agentic-ai-platform-with-agentcore

./: .gitignore  README.md  high-priority-features.md  package.json  pnpm-lock.yaml
apps/backend/: .dockerignore  .env.development  .env.example  Dockerfile  INTERNAL_MCP_API.md  README.md  TEST_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_external_mcp.py  test_external_mcp_flow.py  test_runtime_detail.py  test_runtime_status.py  test_sync_runtime.py
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/agent/: __init__.py
apps/backend/app/agent/application/: local_chat_service.py  mapper.py  service.py
apps/backend/app/agent/dto/: request.py  response.py
apps/backend/app/agent/exception/: exceptions.py
apps/backend/app/dashboard/: __init__.py  controllers.py
apps/backend/app/mcp/: __init__.py
apps/backend/app/middleware/: __init__.py  auth.py
apps/backend/app/shared/: __init__.py  mock_data.py
apps/backend/app/tests/: conftest.py
apps/backend/lambda/kb_creation_handler/: build.sh  handler.py  requirements.txt
apps/backend/lambda/kb_sync_checker/: build.sh  handler.py
apps/backend/lambda/layer/: README.md  requirements.txt
apps/backend/scripts/: create_dynamodb_tables.py  migrate_timestamps.py  test_agent_api.py
apps/backend/tests/: conftest.py
apps/backend/tests/playground/: conftest.py  test_code_generator.py  test_conversation_service.py  test_deployment_service.py  test_dynamodb_conversation_repository.py  test_dynamodb_deployment_repository.py  test_integration_agentcore.py
(+374 files in other folders)
